# mongoose

./: CMakeLists.txt  README.md
include/mongoose/: bson.hpp  mongodb.hpp
include/mongoose/types/: date.hpp  oid.hpp  uuid.hpp
src/: mongodb.cpp
